# den-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Directory.Build.props  Directory.Packages.props  README.md  agents-project.md  den-mcp.slnx  deploy-cli.sh  deploy.sh
agents/: manifest.json
deploy/: activate-den-mcp-new.sh  den-mcp.service  deploy-cli.sh  server.env.example  signal-cli-den.service  signal-cli-update.service  signal-cli-update.timer
docs/: agent-cli-integration-note.md  agent-conductor-application-notes.md  agent-guidance.md  agent-stream-design.md  agent-workflow-guidance.md  agent-workspaces.md  agents-md-generation.md  claude-md-snippet.md  codex-app-server-bridge-plan.md  den-document-references.md  den-web-librarian.md  design-notes.md  dev-ports.md  dispatch-retirement-adr.md  git-inspection-api.md  legacy-codex-claude-bridges.md  legacy-mobile-bridges.md  live-signal-ops-runbook.md  message-intents-design.md  parallel-code-operator-view-audit.md  pi-conductor-context-status.md  pi-den-extension-spike.md  pi-subagent-infrastructure.md  project-specs.md  shared-blackboard-memory.md  sibling-project-patterns.md  telegram-bot-setup.md
kitty/: PROTOCOL.md  den-signal.sh  den_approve.py  den_layout.py  den_watcher.py  tab_bar.py
scripts/: debug-live-signal-cli.sh  deploy-live-server.sh  fix-live-signal-port.sh  generate_agents.py  (+7 more)
src/DenMcp.Desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/DenMcp.Desktop/src-tauri/capabilities/: default.json
src/DenMcp.Desktop/src-tauri/src/: den_client.rs  git.rs  lib.rs  main.rs  runtime.rs  session.rs  settings.rs
(+279 files in other folders)
