[package]
name = "den_mcp_desktop"
version = "0.1.0"
description = "Local desktop operator app for Den"
authors = ["Den MCP"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "den_mcp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
atomicwrites = "0.4"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
